[gd_scene load_steps=2 format=4 uid="uid://bvkxqy8r1n4ys"]

[ext_resource type="Script" path="res://scripts/GameOverWindow.gd" id="1_game_over"]

[node name="GameOverWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_game_over")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="GameOverPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="MainContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="GameOverTitle" type="Label" parent="GameOverPanel/MainContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="GameOverPanel/MainContainer"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="GameOverPanel/MainContainer"]
layout_mode = 2
text = "英雄已死亡！
你的冒险到此结束..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="GameOverPanel/MainContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="GameOverPanel/MainContainer"]
layout_mode = 2

[node name="LoopLabel" type="Label" parent="GameOverPanel/MainContainer/StatsContainer"]
layout_mode = 2
text = "完成循环: 0"
horizontal_alignment = 1

[node name="StepLabel" type="Label" parent="GameOverPanel/MainContainer/StatsContainer"]
layout_mode = 2
text = "总步数: 0"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="GameOverPanel/MainContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="GameOverPanel/MainContainer"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/MainContainer/ButtonContainer"]
layout_mode = 2
text = "重新开始"

[node name="QuitButton" type="Button" parent="GameOverPanel/MainContainer/ButtonContainer"]
layout_mode = 2
text = "退出游戏"